# whisper-meetings

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh  transcribe_meeting.py
src/whisper_meetings/: __init__.py  audio.py  cli.py  config.py  preflight.py  transcriber.py  utils.py
tests/: __init__.py  test_utils.py
